# prompt-studio

./: .gitignore  CLAUDE.md  README.md  SPEC.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: api.rs  commands.rs  db.rs  lib.rs  main.rs  models.rs
src-tauri/src-cli/: cli_db.rs  main.rs
src/components/: ImportExportPanel.tsx  PromptEditor.tsx  PromptList.tsx  SearchBar.tsx  Sidebar.tsx  TemplatePanel.tsx  TopBar.tsx  VariablePanel.tsx  VersionPanel.tsx
src/lib/: api-web.ts  utils.ts
src/lib/tauri/: api.ts
src/stores/: promptStore.ts
src/types/: index.ts
