[package]
name = "prompt-studio"
version = "0.1.0"
description = "可视化AI提示词管理工具"
authors = ["airobushotpot"]
edition = "2021"
default-run = "prompt-studio"

[lib]
name = "prompt_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nanoid = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
actix-web = "4"
actix-cors = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"

[[bin]]
name = "ps"
path = "src-cli/main.rs"
